longitude calculation fixtures and tests added

--- a/tests/fixtures/longitude_calculation/longitude_calculation_test_data_creator.ipynb
+++ b/tests/fixtures/longitude_calculation/longitude_calculation_test_data_creator.ipynb
@@ -5,7 +5,7 @@
    "id": "71df060f",
    "metadata": {},
    "source": [
-    "## Generating fixtures to test the Equation Of Time functions being used and the Longitude Fitting Functions"
+    "## Generating fixtures to test the Equation Of Time functions being used and the Longitude Calculation Functions"
    ]
   },
   {
@@ -35,8 +35,8 @@
     "from solardatatools.dataio import get_pvdaq_data\n",
     "path = Path.cwd().parent.parent.parent\n",
     "os.chdir(path)\n",
-    "from pvsystemprofiler.estimator import ConfigurationEstimator\n",
-    "from pvsystemprofiler.longitude_study import LongitudeStudy"
+    "# from pvsystemprofiler.estimator import ConfigurationEstimator\n",
+    "# from pvsystemprofiler.longitude_study import LongitudeStudy"
    ]
   },
   {
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 22.6 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 54.3 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -93,6 +93,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "political-triumph",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dh = DataHandler(data_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "201dbffa",
    "metadata": {},
    "outputs": [],
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "708a3385",
    "metadata": {},
    "outputs": [
@@ -110,17 +120,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 11.69 seconds\n",
+      "total time: 24.71 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              2.76s\n",
-      "Cleaning                   4.27s\n",
-      "Filtering/Summarizing      4.66s\n",
-      "    Data quality           0.23s\n",
-      "    Clear day detect       0.15s\n",
-      "    Clipping detect        3.55s\n",
-      "    Capacity change detect 0.73s\n",
+      "Preprocessing              5.19s\n",
+      "Cleaning                   9.11s\n",
+      "Filtering/Summarizing      10.41s\n",
+      "    Data quality           0.44s\n",
+      "    Clear day detect       0.30s\n",
+      "    Clipping detect        8.28s\n",
+      "    Capacity change detect 1.38s\n",
       "\n"
      ]
     }
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "40ace537",
    "metadata": {},
    "outputs": [],
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "25e4b3ec",
    "metadata": {},
    "outputs": [],
@@ -163,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "62b4ffd3",
    "metadata": {},
    "outputs": [],
@@ -185,17 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "bda468f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/derins/Documents/gismo/pv-insight/pv-system-profiler')"
+       "PosixPath('/Users/londonoh/Documents/github/pv-system-profiler')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,18 +218,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "910e031c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exporting input for eot algorithms\n",
-    "np.savetxt('./tests/fixtures/longitude_fitting/eot_input.csv', day_of_year,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/longitude_calculation/eot_input.csv', day_of_year,  delimiter=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1d3cb149",
    "metadata": {},
    "outputs": [],
@@ -232,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "9a563f22",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exporting output for eot algorithms\n",
-    "np.savetxt('./tests/fixtures/longitude_fitting/eot_duffie_output.csv', eot_duffie,  delimiter=\",\")\n",
-    "np.savetxt('./tests/fixtures/longitude_fitting/eot_da_rosa_output.csv', eot_da_rosa,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/longitude_calculation/eot_duffie_output.csv', eot_duffie,  delimiter=\",\")\n",
+    "np.savetxt('./tests/fixtures/longitude_calculation/eot_da_rosa_output.csv', eot_da_rosa,  delimiter=\",\")"
    ]
   },
   {
@@ -252,40 +262,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "1edd7410",
    "metadata": {},
    "outputs": [],
    "source": [
     "# exporting inputs for fit_longitude\n",
     "# solarnoon\n",
-    "np.savetxt('./tests/fixtures/longitude_fitting/solarnoon.csv', solarnoon,  delimiter=\",\")\n",
+    "np.savetxt('./tests/fixtures/longitude_calculation/solarnoon.csv', solarnoon,  delimiter=\",\")\n",
     "# days\n",
-    "np.savetxt('./tests/fixtures/longitude_fitting/days.csv', days,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/longitude_calculation/days.csv', days,  delimiter=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "01faad28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-87.18720731510918"
+       "-91.40955141527715"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pvsystemprofiler.algorithms.longitude.fitting import fit_longitude\n",
+    "from pvsystemprofiler.algorithms.longitude.calculation import calculate_longitude\n",
     "\n",
-    "fit_longitude(eot_duffie, solarnoon, days, gmt_offset, loss='l2')"
+    "calculate_longitude(eot_duffie, solarnoon, days, gmt_offset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "employed-elizabeth",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
