fix_dst() added, test decimal = 0, tests pass

--- a/tests/fixtures/longitude_fitting/longitude_fitting_test_data_creator.ipynb
+++ b/tests/fixtures/longitude_fitting/longitude_fitting_test_data_creator.ipynb
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 24.9 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 23.4 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -92,41 +92,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "201dbffa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dh = DataHandler(data_frame[0])"
+    "dh = DataHandler(data_frame[0]).fix_dst()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "708a3385",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total time: 10.38 seconds\n",
-      "--------------------------------\n",
-      "Breakdown\n",
-      "--------------------------------\n",
-      "Preprocessing              3.84s\n",
-      "Cleaning                   0.26s\n",
-      "Filtering/Summarizing      6.29s\n",
-      "    Data quality           0.32s\n",
-      "    Clear day detect       0.22s\n",
-      "    Clipping detect        4.77s\n",
-      "    Capacity change detect 0.98s\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'run_pipeline'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-9fa9affe82bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpower_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ac_power'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfix_shifts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorrect_tz\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'run_pipeline'"
      ]
     }
    ],
    "source": [
-    "dh.run_pipeline(power_col='dc_power', fix_shifts=False)"
+    "dh.run_pipeline(power_col='ac_power', fix_shifts=False, correct_tz=False)"
    ]
   },
   {
@@ -139,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "40ace537",
    "metadata": {},
    "outputs": [],
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "25e4b3ec",
    "metadata": {},
    "outputs": [],
@@ -163,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "62b4ffd3",
    "metadata": {},
    "outputs": [],
@@ -185,21 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bda468f5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/derins/Documents/gismo/pv-insight/pv-system-profiler')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = Path.cwd()\n",
     "os.chdir(path)\n",
@@ -208,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "910e031c",
    "metadata": {},
    "outputs": [],
@@ -219,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1d3cb149",
    "metadata": {},
    "outputs": [],
@@ -232,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9a563f22",
    "metadata": {},
    "outputs": [],
@@ -252,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1edd7410",
    "metadata": {},
    "outputs": [],
@@ -266,21 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "01faad28",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-87.18720731510918"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pvsystemprofiler.algorithms.longitude.fitting import fit_longitude\n",
     "\n",
