--- a/notebooks/function_example.ipynb
+++ b/notebooks/function_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 23.6 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 26.7 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -84,231 +84,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SiteID</th>\n",
-       "      <th>ac_power</th>\n",
-       "      <th>dc_power</th>\n",
-       "      <th>inv1_ac_power</th>\n",
-       "      <th>inv1_dc_current</th>\n",
-       "      <th>inv1_dc_power</th>\n",
-       "      <th>inv1_dc_voltage</th>\n",
-       "      <th>inv1_temp</th>\n",
-       "      <th>inv2_ac_power</th>\n",
-       "      <th>inv2_dc_current</th>\n",
-       "      <th>...</th>\n",
-       "      <th>inv6_ac_power</th>\n",
-       "      <th>inv6_dc_current</th>\n",
-       "      <th>inv6_dc_power</th>\n",
-       "      <th>inv6_dc_voltage</th>\n",
-       "      <th>inv6_temp</th>\n",
-       "      <th>inv7_ac_power</th>\n",
-       "      <th>inv7_dc_current</th>\n",
-       "      <th>inv7_dc_power</th>\n",
-       "      <th>inv7_dc_voltage</th>\n",
-       "      <th>inv7_temp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01 00:00:00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01 00:05:00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01 00:10:00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01 00:15:00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01 00:20:00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 38 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     SiteID  ac_power  dc_power  inv1_ac_power  \\\n",
-       "2015-01-01 00:00:00     NaN       NaN       NaN            NaN   \n",
-       "2015-01-01 00:05:00     NaN       NaN       NaN            NaN   \n",
-       "2015-01-01 00:10:00     NaN       NaN       NaN            NaN   \n",
-       "2015-01-01 00:15:00     NaN       NaN       NaN            NaN   \n",
-       "2015-01-01 00:20:00     NaN       NaN       NaN            NaN   \n",
-       "\n",
-       "                     inv1_dc_current  inv1_dc_power  inv1_dc_voltage  \\\n",
-       "2015-01-01 00:00:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:05:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:10:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:15:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:20:00              NaN            NaN              NaN   \n",
-       "\n",
-       "                     inv1_temp  inv2_ac_power  inv2_dc_current  ...  \\\n",
-       "2015-01-01 00:00:00        NaN            NaN              NaN  ...   \n",
-       "2015-01-01 00:05:00        NaN            NaN              NaN  ...   \n",
-       "2015-01-01 00:10:00        NaN            NaN              NaN  ...   \n",
-       "2015-01-01 00:15:00        NaN            NaN              NaN  ...   \n",
-       "2015-01-01 00:20:00        NaN            NaN              NaN  ...   \n",
-       "\n",
-       "                     inv6_ac_power  inv6_dc_current  inv6_dc_power  \\\n",
-       "2015-01-01 00:00:00            NaN              NaN            NaN   \n",
-       "2015-01-01 00:05:00            NaN              NaN            NaN   \n",
-       "2015-01-01 00:10:00            NaN              NaN            NaN   \n",
-       "2015-01-01 00:15:00            NaN              NaN            NaN   \n",
-       "2015-01-01 00:20:00            NaN              NaN            NaN   \n",
-       "\n",
-       "                     inv6_dc_voltage  inv6_temp  inv7_ac_power  \\\n",
-       "2015-01-01 00:00:00              NaN        NaN            NaN   \n",
-       "2015-01-01 00:05:00              NaN        NaN            NaN   \n",
-       "2015-01-01 00:10:00              NaN        NaN            NaN   \n",
-       "2015-01-01 00:15:00              NaN        NaN            NaN   \n",
-       "2015-01-01 00:20:00              NaN        NaN            NaN   \n",
-       "\n",
-       "                     inv7_dc_current  inv7_dc_power  inv7_dc_voltage  \\\n",
-       "2015-01-01 00:00:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:05:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:10:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:15:00              NaN            NaN              NaN   \n",
-       "2015-01-01 00:20:00              NaN            NaN              NaN   \n",
-       "\n",
-       "                     inv7_temp  \n",
-       "2015-01-01 00:00:00        NaN  \n",
-       "2015-01-01 00:05:00        NaN  \n",
-       "2015-01-01 00:10:00        NaN  \n",
-       "2015-01-01 00:15:00        NaN  \n",
-       "2015-01-01 00:20:00        NaN  \n",
-       "\n",
-       "[5 rows x 38 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-0b0fa15d11fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_frame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'head'"
+     ]
     }
    ],
    "source": [
@@ -324,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,28 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total time: 25.24 seconds\n",
-      "--------------------------------\n",
-      "Breakdown\n",
-      "--------------------------------\n",
-      "Preprocessing              10.92s\n",
-      "Cleaning                   11.96s\n",
-      "Filtering/Summarizing      2.36s\n",
-      "    Data quality           0.45s\n",
-      "    Clear day detect       0.29s\n",
-      "    Clipping detect        0.31s\n",
-      "    Capacity change detect 1.30s\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dh.run_pipeline(power_col='ac_power')"
    ]
@@ -368,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,33 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'est_sr_raw': None,\n",
-       " 'est_ss_raw': None,\n",
-       " 'meas_sr_raw': None,\n",
-       " 'meas_ss_raw': None,\n",
-       " 'thres_raw': None,\n",
-       " 'est_sr_f': array([7.27021438, 7.26635585, 7.26187951, ..., 7.27546266, 7.27314674,\n",
-       "        7.27021438]),\n",
-       " 'est_ss_f': array([17.04094663, 17.05082992, 17.06119466, ..., 17.02314619,\n",
-       "        17.03179782, 17.04094663]),\n",
-       " 'meas_sr_f': array([7.5       , 7.58333333, 7.83333333, ..., 7.58333333, 8.66666667,\n",
-       "        7.58333333]),\n",
-       " 'meas_ss_f': array([16.91666667, 16.83333333, 16.33333333, ..., 16.75      ,\n",
-       "        16.58333333, 16.83333333]),\n",
-       " 'thres_f': 1e-05}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "opt_dict"
    ]
@@ -497,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,20 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-76.99589908349992"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fit_longitude(eot_duffie, solarnoon, days, gmt_offset, loss='l2')"
    ]
@@ -602,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,41 +408,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-76.99172047796024"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fit_longitude(eot_duffie2, solarnoon2, days2, gmt_offset, loss='l2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([12.20833333, 12.20833333, 12.08333333, ..., 12.16666667,\n",
-       "       12.625     , 12.20833333])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "solarnoon"
    ]
