--- a/tests/fixtures/longitude_fitting/longitude_fitting_test_data_creator.ipynb
+++ b/tests/fixtures/longitude_fitting/longitude_fitting_test_data_creator.ipynb
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 23.4 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 23.7 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -92,32 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "201dbffa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dh = DataHandler(data_frame[0]).fix_dst()"
+    "dh = DataHandler(data_frame[0])\n",
+    "dh.fix_dst()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "708a3385",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'run_pipeline'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-9fa9affe82bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpower_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ac_power'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfix_shifts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorrect_tz\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'run_pipeline'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dh.run_pipeline(power_col='ac_power', fix_shifts=False, correct_tz=False)"
    ]
@@ -184,8 +173,7 @@
    "outputs": [],
    "source": [
     "path = Path.cwd()\n",
-    "os.chdir(path)\n",
-    "path"
+    "os.chdir(path)"
    ]
   },
   {
